# infinite_library

./: .byebug_history  .gitignore  Procfile  README.md  app.py  babel.rb  config.go  encrpytion_poc.rb  encrypt  encrypt.go  encryption_poc.rb  go.mod  library.py  library_of_babel.go  mappings.go  mappings.py  mappings.rb  mix.exs  package.json  pyproject.toml  requirements.txt  start.sh  time.rb
app/assets/stylesheets/: hello.scss
app/controllers/: hello_controller.rb
app/views/hello/: hello.html.erb  world.html.erb
app/views/layouts/: application.html.erb
config/: application.rb  cable.yml  config.exs  credentials.yml.enc  master.key  routes.rb
config/environments/: production.rb
lib/: library.ex
library-client/: package-lock.json  package.json
library-client/src/: App.css  App.js
mappings/: mappings.go
old/: babel.rb  book.txt  encrypt.go  encryption_poc.rb  mappings.rb  num.txt  thing.ex
public/packs/: manifest.json
public/packs/js/: application-d0d147c4284195900475.js  application-d0d147c4284195900475.js.map
tmp/: development_secret.txt
tmp/cache/bootsnap/: load-path-cache
tmp/cache/bootsnap/compile-cache/00/: 008557eca792d4  37870ac637d05f  64b58e3b203a46  a3499000e9eb23  a6c068445fd014  ac7f13710d88d5  b638ae2415bd42  ba5aa305dbf141  dce933f51c9091
tmp/cache/bootsnap/compile-cache/01/: 196c2aab3056c7  356815d8c171fe  41eb8ea6b618bf  587ccc7fdbe59b  71f6b359d7387a  769068dfce65cd  7884f6b7d3e6e3  e64909233e859a  e89a5d23f58137
tmp/cache/webpacker/: last-compilation-digest-development
(+2042 files in other folders)
